Bug 279849 [UI] StackModelFactory should not be setting setMax/MinVisible

--- a/examples/org.eclipse.e4.ui.examples.legacy.workbench/css/xp-silver-legacy.css
+++ b/examples/org.eclipse.e4.ui.examples.legacy.workbench/css/xp-silver-legacy.css
@@ -4,6 +4,8 @@ CTabFolder {
 	background-color: rgb(224, 223, 227);
 	font: normal;
 	simple: false;
+	maximize-visible: true;
+	minimize-visible: true;
 }
 
 CTabFolder:selected {
